View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030579 | Open CASCADE | OCCT:DRAW | public | 2019-03-15 13:20 | 2019-04-08 12:19 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030579: Draw Harness, Draw_Interpretor - catch exceptions other than Standard_Failure | ||||
Description | Draw_Interpretor currently catches only Standard_Failure exceptions, but it would be great if it will also catch other unexpected exceptions. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR30579 has been created by kgv. SHA-1: 4aba477a062037681cb1d5709bea732a4302348d Detailed log of new commits: Author: kgv Date: Fri Mar 15 13:15:18 2019 +0300 0030579: Draw Harness, Draw_Interpretor - catch exceptions other than Standard_Failure |
|
Branch CR30579 has been updated forcibly by kgv. SHA-1: 8fff1c5379453a35f2fdba17c8754ffa64485695 |
|
Patch is ready for review. |
|
Reviewed, please integrate. One remark is: perhaps it is better to use 'const' before the type in catch statement, like this: catch (const std::exception& theStdException) Besides, do you have good idea why job CR30579-master-KGV-OCCT-Windows-64-VC14-sample-csharp has failed in Jenkins test? |
|
CR30579-master-KGV-OCCT-Windows-64-VC14-sample-csharp has failed with following error: win64\vc141\bin\OCCTProxy_D3D.dll". The process cannot access the file because it is being used by another process. I can not explain the exact cause of this error, but problem was fixed after restart of the job. |
|
Combination - OCCT branch : CR30579 master SHA - 8fff1c5379453a35f2fdba17c8754ffa64485695 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - 19cf12d4f918562ea1456aa224c6f7a64b9c4ad7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16608.389999999992 / 16599.24999999996 [+0.06%] Products Total CPU difference: 9082.61000000005 / 9092.71000000004 [-0.11%] Windows-64-VC14: OCCT Total CPU difference: 18035.8125 / 17985.28125 [+0.28%] Products Total CPU difference: 10503.5 / 10460.953125 [+0.41%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30579_1 has been created by kgv. SHA-1: 24df2ce3ec81bf4e8d0512541c9c52eb0ef6e9b2 Detailed log of new commits: Author: kgv Date: Fri Mar 15 13:15:18 2019 +0300 0030579: Draw Harness, Draw_Interpretor - catch exceptions other than Standard_Failure |
|
Branch CR30579_1 has been deleted by inv. SHA-1: 24df2ce3ec81bf4e8d0512541c9c52eb0ef6e9b2 |
|
Branch CR30579 has been deleted by inv. SHA-1: 8fff1c5379453a35f2fdba17c8754ffa64485695 |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-03-15 13:20 | kgv | New Issue | |
2019-03-15 13:20 | kgv | Assigned To | => apn |
2019-03-15 13:24 | git | Note Added: 0082981 | |
2019-03-15 15:00 | git | Note Added: 0082988 | |
2019-03-15 16:33 | kgv | Note Added: 0082996 | |
2019-03-15 16:33 | kgv | Assigned To | apn => abv |
2019-03-15 16:33 | kgv | Status | new => resolved |
2019-03-24 13:23 | abv | Note Added: 0083205 | |
2019-03-24 13:23 | abv | Assigned To | abv => bugmaster |
2019-03-24 13:23 | abv | Status | resolved => reviewed |
2019-03-25 13:04 | apn | Note Added: 0083221 | |
2019-03-25 13:05 | apn | Test case number | => Not needed |
2019-03-25 13:05 | apn | Note Added: 0083222 | |
2019-03-25 13:05 | apn | Status | reviewed => tested |
2019-03-25 13:12 | git | Note Added: 0083223 | |
2019-03-30 13:07 | apn | Changeset attached | => occt master f996b507 |
2019-03-30 13:07 | apn | Assigned To | bugmaster => apn |
2019-03-30 13:07 | apn | Status | tested => verified |
2019-03-30 13:07 | apn | Resolution | open => fixed |
2019-04-08 12:18 | git | Note Added: 0083486 | |
2019-04-08 12:19 | git | Note Added: 0083506 |