0030579: Draw Harness, Draw_Interpretor - catch exceptions other than Standard_Failure